--- a/css/articulos/articulo2.css
+++ b/css/articulos/articulo2.css
@@ -18,20 +18,22 @@ body{
 }
 /************************************************************************************************/
 /* CABECERA */
-.boxHeader{
+.boxHeaderArt{
     width: 100%;
-    height: 250px;
+    height: 150px;
     background-color: rgba(124, 104, 238, 0.592);
     margin-top: 35px;
     border-radius: 100px 300px;
     box-shadow: 10px 10px 10px #b3b5caa6;
+    float: left;
+    padding-top: 15px;
 }
 
 /* texto cabecera*/
-#letraHeader{
+#letraHeaderArt{
 
     color:rgb(223, 214, 222);
-    font: 100px bold;
+    font: 50px bold;
     font-family: avengers;
     text-align: center;
     text-transform: uppercase; 
@@ -48,10 +50,10 @@ body{
 
 .boxArticle{
     width: 100%;
-    height: 3200px;
-    background-color: rgba(255, 0, 128, 0.756);;
+    height: 3100px;
+    background-color: rgba(255, 0, 128, 0.756);
     margin-top:35px;
-    padding-top: 35px;
+    float: left;
     margin-bottom: 20px;
 }
 
@@ -258,14 +260,14 @@ h3{
     }
     /************************************************************************************************/
     /* CABECERA */
-    .boxHeader{
+    .boxHeaderArt{
         
         height: 100px;
         margin-top: 35px;
         box-shadow: 5px 5px 5px #b3b5caa6;
     }
     /* texto cabecera*/
-    #letraHeader{
+    #letraHeaderArt{
         font-size: 50px;
     }
 
@@ -466,14 +468,14 @@ h3{
     
     /************************************************************************************************/
     /* CABECERA */
-    .boxHeader{
+    .boxHeaderArt{
         
         height: 100px;
         margin-top: 35px;
         box-shadow: 5px 5px 5px #b3b5caa6;
     }
     /* texto cabecera*/
-    #letraHeader{
+    #letraHeaderArt{
         font-size: 50px;
     }
 
