--- a/css/noticias.css
+++ b/css/noticias.css
@@ -34,7 +34,7 @@ body{
 
 .boxArticle{
     width: 100%;
-    height: 500px;
+    height: 400px;
     background-color: rgba(255, 0, 128, 0.658);
     margin-top:35px;
     float: left;
@@ -113,6 +113,10 @@ article > a {
     z-index: 1;
 }
 
+p{
+    height: 40px;
+}
+
 @media screen and (max-width: 700px) and (orientation: portrait){
     body{
         width: auto;
@@ -135,8 +139,6 @@ article > a {
         margin-bottom: 15px;
         
     }
-    
-    
     
     
     /* Propiedades conjuntas de las cajas */
@@ -277,7 +279,7 @@ article > a {
         background: linear-gradient(180deg, rgba(7, 16, 36, 0.933) 26%, rgb(126, 19, 180) 49%, rgba(255,212,102,1) 100%) !important;
         margin: 15px;
     }
-px
+
     
     .boxTitulo{
         width: 100%;
@@ -323,7 +325,7 @@ px
     }
 
     p{
-        height: 90px;
+        height: 40px;
     }
 
     h3{
@@ -399,8 +401,32 @@ px
         box-shadow: 10px 10px 10px #b3b5caa6;
     }
     
+    .boxArticle{
+        width: 100%;
+        height: 450px;
+        background-color: rgba(255, 0, 128, 0.658);
+        margin-top:35px;
+        float: left;
+    }
+
+    p{
+        height: 120px;
+    }
 
 }
 
+@media screen and (min-width: 1300px) {
 
+    .boxArticle{
+        width: 100%;
+        height: 400px;
+        background-color: rgba(255, 0, 128, 0.658);
+        margin-top:35px;
+        float: left;
+    }
+
+    p{
+        height: 50px;
+    }
+}
 
