--- a/css/peliculas/wakanda.css
+++ b/css/peliculas/wakanda.css
@@ -372,49 +372,28 @@ body{
 }
 
 .propiedadesBox{
-
     border-radius: 20px;
     box-shadow: 10px 10px 10px #b3b5caa6;
     padding-top: 20px;
     padding-bottom: 20px;
     margin-left:0;
-    
 }
 
 .descriptionVideo1{
-
-    float: left;
+    float: right;
     background-color:#1a4f61da;
     width: 43%;
     height: 500px;
-    margin-top: 35px;
 }
 
 .descriptionVideo2{
-
-    float: left;
+    float: right;
     background-color:#1a4f61da;
     width: 43%;
     height:  450px;
-    margin-top: 35px;
-
-}
-
-.estiloParrafo{
-
-    font-size: 15px;
-    color: aliceblue;
-    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    text-align: justify;
-    float: left;
-    margin: 10px 10px;
-    text-indent: 50px; /*sangria*/
-    line-height: 20px;  /*separacion lineas*/
-    letter-spacing: 1px; /*separacion entre letras*/
 }
 
 #letraPeliculas{
-
     color:rgb(223, 214, 222);
     font: 20px bold;
     font-family: avengers;
