Retoques Responsive Design movil

--- a/css/noticias.css
+++ b/css/noticias.css
@@ -186,6 +186,7 @@ p{
         float: right;
         font-size: 17px;
         margin-right: 40px;
+        padding-top: 250px;
         -webkit-text-stroke: 0.01px whitesmoke;
     }
      
@@ -262,6 +263,7 @@ p{
         float: right;
         font-size: 17px;
         margin-right: 40px;
+        padding-top: 250px;
         -webkit-text-stroke: 0.01px whitesmoke;
     }
      
