--- a/css/haztevengador.css
+++ b/css/haztevengador.css
@@ -105,6 +105,19 @@ textarea{
     border-radius: 5px;
 }
 
+/* Añadimos pseudoclases para controlar determinados eventos */
+input:focus{
+    background-color: rgb(208, 204, 204);
+}
+
+input:checked{
+    cursor: progress;
+}
+
+input:disabled{
+    cursor: not-allowed;
+}
+
 @media screen and (max-width: 700px) and (orientation: portrait){
     .containerFondo{
         background-color: rgb(17, 17, 87);
