--- a/css/article.css
+++ b/css/article.css
@@ -64,7 +64,7 @@
 
 
 
-@media screen and (max-width: 700px) and (orientation: portrait){
+@media only screen and (min-height: 701px) and (max-width: 1299px) and (orientation: portrait) {
     .boxArticle{
         margin-left: 15px;
         margin-top: 10px;
@@ -152,19 +152,19 @@
     }
 }
 
-@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) {
+@media only screen and (min-height: 701px) and (max-width: 1299px) and (orientation: portrait) {
 
     body{
         margin-left: 40px;
     }
         
     .boxArticle{
-    
+
         background-color:   rgba(187, 132, 70, 0.264);
         float: left;
-        width: 82%;
+        width: 84%;
         height: 1100px;
-        margin-left: 35px;
+        margin-left: 25px;
         margin-top: 35px;
         box-shadow: 10px 10px 10px #b3b5caa6;
     
@@ -179,7 +179,7 @@
         height: 190px;
         margin-top: 40px;
         margin-bottom: 20px;
-        margin-left: 20px;
+        margin-left: 2px;
         margin-right: 20px;
         box-shadow: 10px 10px 10px #b3b5caa6;
         padding-bottom: 15px;
@@ -190,7 +190,7 @@
     .boxDiv{
         width: 100%;
         height: 150px;
-        margin: 15px;
+        margin: 10px;
     }
     
 
@@ -214,10 +214,10 @@
     
 
     
-    @media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+    @media only screen and (min-height:701px) and (max-width: 1299px) and (orientation: landscape) {
     
         body{
-            margin-left: 40px;
+            margin-left: 35px;
         }
             
         .boxArticle{
@@ -277,6 +277,7 @@
             font-family:Verdana, Geneva, Tahoma, sans-serif;
         }
         
+       
        
     }
     
