--- a/css/articulos/articulo2.css
+++ b/css/articulos/articulo2.css
@@ -682,7 +682,7 @@ h3{
 }
 
 
-@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) {
+@media only screen and (min-height: 701px) and (max-width: 1299px) and (orientation: portrait) {
 
     body{
         width: auto;
