--- a/css/articulos/articulo3.css
+++ b/css/articulos/articulo3.css
@@ -333,7 +333,7 @@ body{
 }
 
 
-@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) {
+@media only screen and (min-height: 701px) and (max-width: 1299px) and (orientation: portrait) {
 
 
     body{
@@ -356,7 +356,7 @@ body{
     }
 
     .box{
-        width: 720px;
+        width: 665px;
         height: 100px;
         float: left;
         margin:5px
@@ -381,7 +381,7 @@ body{
 
     .boxArticle{
         width: 100%;
-        height: 1750px;
+        height: 1800px;
         background-color: rgba(255, 0, 128, 0.756);
         margin-top:35px;
         padding-top: 35px;
