--- a/css/articulos/articulo4.css
+++ b/css/articulos/articulo4.css
@@ -207,7 +207,7 @@ body{
 }
 
 
-@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) {
+@media only screen and (min-height: 701px) and (max-width: 1299px) and (orientation: portrait) {
 
     body{
         width: auto;
@@ -217,7 +217,7 @@ body{
     
 .estiloParrafo{
 
-    font-size: 20px;
+    font-size: 18px;
     color: aliceblue;
     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     text-align: justify;
