--- a/css/footer.css
+++ b/css/footer.css
@@ -114,12 +114,11 @@
 
 
 
- @media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) {
-
+ @media only screen and (min-height: 701px) and (max-width: 1299px) and (orientation: portrait) {
     .boxFooter{
 
         background-color:  rgba(45, 13, 20, 0.779);
-        width: 99%;
+        width: 100%;
         height: 250px;
         margin-bottom: 20px;
         box-shadow: 10px 10px 10px #b3b5caa6;
