--- a/css/haztevengador.css
+++ b/css/haztevengador.css
@@ -258,8 +258,7 @@ textarea{
 }
 
 
-@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) {
-
+@media only screen and (min-height: 701px) and (max-width: 1299px) and (orientation: portrait) {
     body{
         width: auto;
         margin: 15px;
@@ -269,8 +268,8 @@ textarea{
     .boxTitulo{
         background-color: mediumturquoise;
         opacity: 0.9;
-        width: 99%;
-        height: 65px;
+        width: 100%;
+        height: 80px;
         margin-bottom: 15px;
         margin-top: 15px;
         float: left;
@@ -280,7 +279,7 @@ textarea{
     .Box{
         background-color: mediumturquoise;
         opacity: 0.9;
-        width: 99%;
+        width: 100%;
         height: 110px;
         margin-bottom: 15px;
         margin-top: 10px;
@@ -291,7 +290,7 @@ textarea{
     .boxFormulario{
         background-color: mediumturquoise;
         opacity: 0.9;
-        width: 99%;
+        width: 100%;
         margin-top: 15px;
         margin-bottom: 30px;
         padding-bottom: 10px;
