--- a/css/header.css
+++ b/css/header.css
@@ -85,13 +85,13 @@
 }
 
 
-@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) {
+@media only screen and (min-height: 701px) and (max-width: 1299px) and (orientation: portrait) {
 
     .boxHeader{
 
         background-color: rgba(45, 13, 20, 0.779);
         float: left;
-        width: 91.5%;
+        width: 93%;
         height: 100px;
         padding: 25px;
         margin-top: 15px;
@@ -112,12 +112,12 @@
 
 
 
-@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) { 
+@media only screen and (max-height: 701px) and (max-width: 1299px) and (orientation: landscape) { 
 
     .boxHeader{
 
         background-color: rgba(45, 13, 20, 0.779);
-        width: 95%;
+        width: 50%;
         height: 100px;
         padding: 25px;
         margin-top: 30px;
