--- a/css/peliculas/capitanamerica.css
+++ b/css/peliculas/capitanamerica.css
@@ -437,12 +437,12 @@ body{
 }
 
 
-@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) {
+@media only screen and (min-height: 701px) and (max-width: 1024px) and (orientation: portrait) {
 
     body{
    
        width: auto;
-       margin: 15px;
+       margin: auto;
    }
    
    
@@ -562,7 +562,7 @@ body{
    
    .box{
        background-color:  rgba(103, 22, 27, 0.727);
-       width: 99%;
+       width: 100%;
        height: 100px;
        margin-bottom: 25px;
        margin-top: 35px;
