--- a/css/peliculas/guardianes.css
+++ b/css/peliculas/guardianes.css
@@ -433,13 +433,13 @@ body{
 }
 
 
-@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) {
+@media only screen and (min-height: 701px) and (max-width: 1299px) and (orientation: portrait) {
 
    
     body{
 
         width: auto;
-        margin: 15px;
+        margin: auto;
 
     }
 
@@ -482,7 +482,7 @@ body{
 
     float: left;
     background-color:#eed79eba;
-    width: 42%;
+    width: 44%;
     height: 400px;
     margin-top: 35px;
 
@@ -492,7 +492,7 @@ body{
 
     float: left;
     background-color:#eed79eba;
-    width: 42%;
+    width: 44%;
     height: 370px;
     margin-top: 35px;
 }
@@ -501,7 +501,7 @@ body{
 
     float: left;
     background-color:#eed79eba;
-    width: 42%;
+    width: 44%;
     height: 370px;
     margin-top: 35px;
 
