--- a/css/peliculas/spiderman.css
+++ b/css/peliculas/spiderman.css
@@ -431,12 +431,12 @@ body{
 }
 
 
-@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) {
+@media only screen and (min-height: 701px) and (max-width: 1299px) and (orientation: portrait) {
 
     body{
         width: auto;
         margin: auto;
-        margin-left: 15px;
+    
     }
 
     .propiedadesBox{
@@ -453,7 +453,7 @@ body{
 
         float: left;
         background-color:#e5b96ea2;
-        width: 42%;
+        width: 44%;
         height: 450px;
         margin-top: 35px;
     
@@ -463,7 +463,7 @@ body{
 
         float: left;
         background-color:#e5b96ea2;
-        width: 42%;
+        width: 44%;
         height: 450px;
         margin-top: 35px;
     
@@ -473,7 +473,7 @@ body{
 
         float: left;
         background-color:#e5b96ea2;
-        width: 42%;
+        width: 44%;
         height: 450px;
         margin-top: 35px;
     
@@ -506,7 +506,7 @@ body{
 
     .box{
         background-color:#587493c0;
-        width: 98%;
+        width: 100%;
         height: 100px;
         margin-bottom: 25px;
         margin-top: 35px;
@@ -521,6 +521,8 @@ body{
         margin-bottom: 20px;
         box-shadow: 10px 10px 10px #b3b5caa6;
     }
+
+    
 
 }
 
