--- a/css/peliculas/thor.css
+++ b/css/peliculas/thor.css
@@ -484,12 +484,12 @@ body{
 }
 
 
-@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) {
+@media only screen and (min-height: 701px) and (max-width: 1299px) and (orientation: portrait) {
 
     body{
         width: auto;
         margin: auto;
-        margin-left: 15px;
+      
     }
 
 
@@ -507,7 +507,7 @@ body{
 
         float: left;
         background-color: rgb(115, 181, 207);
-        width: 42%;
+        width: 44%;
         height: 370px;
         margin-top: 35px;
 
@@ -519,7 +519,7 @@ body{
 
         float: left;
         background-color: rgb(115, 181, 207);
-        width: 42%;
+        width: 44%;
         height: 370px;
         margin-top: 35px;
     
@@ -531,7 +531,7 @@ body{
 
         float: left;
         background-color: rgb(115, 181, 207);
-        width: 42%;
+        width: 44%;
         height: 370px;
         margin-top: 35px;
     
@@ -542,7 +542,7 @@ body{
 
         float: left;
         background-color: rgb(115, 181, 207);
-        width: 42%;
+        width: 44%;
         height: 370px;
         margin-top: 35px;
     
