--- a/css/peliculas/wakanda.css
+++ b/css/peliculas/wakanda.css
@@ -370,15 +370,15 @@ body{
 
 
 
-@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) {
+@media only screen and (min-height: 701px) and (max-width: 1299px) and (orientation: portrait) {
 
     body{
         width: auto;
         margin: auto;
-        margin-left: 15px;
+
     }
 
-}
+
 
 .propiedadesBox{
     border-radius: 20px;
@@ -415,12 +415,28 @@ body{
 
 .box{
     background-color: #a4b2a5d8;
-    width: 98.5%;
+    width: 100%;
     height: 100px;
     margin-bottom: 30px;
     margin-top: 35px;
     float: left;
 }
+
+.estiloParrafo{
+
+    font-size: 15px;
+    color: aliceblue;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    text-align: justify;
+    float: left;
+    margin: 10px 10px;
+    text-indent: 50px; /*sangria*/
+    line-height: 25px;  /*separacion lineas*/
+    letter-spacing: 1px; /*separacion entre letras*/
+}
+
+}
+
 
 
 
