--- a/css/quienessomos.css
+++ b/css/quienessomos.css
@@ -322,7 +322,7 @@ body{
 
 
 
-@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) {
+@media only screen and (min-height: 701px) and (max-width: 1299px) and (orientation: portrait) {
 
     body{
         width: auto;
@@ -353,7 +353,7 @@ body{
     .box{
     
         width: 100%;
-        height: 380px;
+        height: 400px;
         background-color: rgba(30, 93, 30, 0.721);
         float: left;
         margin-top: 15px;
@@ -365,8 +365,9 @@ body{
     .boxTexto{
         width: 65%;
         height: 300px;
-        margin: 15px 25px;
-        float:left
+        margin: 15px 15px;
+        float:left;
+        margin-top:0;
     }
     
     .boxPresentacion{
@@ -432,7 +433,7 @@ body{
 
 }
 
-@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+@media only screen and (min-width: 701px) and (max-width: 1024px) and (orientation: landscape) {
 
 
     body{
