--- a/css/article.css
+++ b/css/article.css
@@ -179,7 +179,7 @@
         height: 190px;
         margin-top: 40px;
         margin-bottom: 20px;
-        margin-left: 2px;
+        margin-left: 20px;
         margin-right: 20px;
         box-shadow: 10px 10px 10px #b3b5caa6;
         padding-bottom: 15px;
@@ -214,7 +214,7 @@
     
 
     
-    @media only screen and (min-height:701px) and (max-width: 1299px) and (orientation: landscape) {
+    @media only screen and (min-width: 768px) and (max-width: 1024px)  and (orientation: landscape) {
     
         body{
             margin-left: 35px;
