--- a/css/articulos/articulo5.css
+++ b/css/articulos/articulo5.css
@@ -381,21 +381,21 @@ body{
     }
 
 
-    @media only screen and (min-height: 701px) and (max-width: 1299px) and (orientation: portrait) {
+    @media only screen and( min-width: 768px) and (max-width: 1024px)  and (orientation: portrait) {
 
         body{
-            width: auto;
+            width: auto; 
             margin: 15px;
         } 
     
     
         .boxImage1{
       
-            width: 600px;
-            height: 300px;
+            width: 400px;
+            height: 200px !important;
             margin-left: 45px;
-            float: left;
-            margin: 150px 35px 25px 35px;
+            float: none;
+            margin: 35px 35px 25px 35px;
             
         }
     
@@ -403,7 +403,7 @@ body{
       
             width: 90%;
             height: 100px;
-            float: left;
+            float: none;
             margin: 35px;
             text-align: justify; 
         }
@@ -413,7 +413,7 @@ body{
         
             width: 90%;
             height: 100px;
-            float: left;
+            float: none;
             margin: 35px;   
             text-align: justify;
         }
@@ -422,8 +422,8 @@ body{
       
             width: 600px;
             height: 200px;
-    
-            float: left;
+
+            float: none;
             margin: 35px 35px 35px 35px;
             
         }
@@ -433,7 +433,7 @@ body{
             width: 88%;
             height: 200px;
             margin-left: 45px;
-            float: left;
+            float: none;
             margin:  15px 55px;
             text-align: justify;
             
