--- a/css/aside.css
+++ b/css/aside.css
@@ -260,7 +260,7 @@
     } 
 }
 
-@media only screen and (min-height: 701px) and (max-width: 1299px) and (orientation: portrait) {
+@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) {
 
     .boxAside{
 
@@ -277,18 +277,18 @@
 
     .contenedor1{
    
-        width: 250px;
+        width: 300px;
         height: 475px;
-        margin-left: 33px;
+        margin-left: 25px;
         margin-top: 40px;
         float:left;
     }
 
     .contenedor2{
 
-        width: 250px;
+        width: 300px;
         height: 200x;
-        margin-left: 33px;
+        margin-left: 25px;
         margin-top: 40px;
         float:left;
         background: linear-gradient( rgba(20, 51, 135, 0.704), rgba(89, 20, 135, 0.785));
@@ -311,9 +311,9 @@
     
     .contenedor{
 
-        width: 250px;
+        width: 300px;
         height: 200x;
-        margin-left: 33px;
+        margin-left: 25px;
         margin-top: 40px;
         float:left;  
         background: linear-gradient( rgba(20, 51, 135, 0.704), rgba(89, 20, 135, 0.704));
@@ -322,7 +322,7 @@
 }
 
 
-@media only screen and (min-width: 701px) and (max-width: 1299px) and (orientation: landscape) {
+@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
     .boxAside{
 
         background-color: rgba(45, 13, 20, 0.445);
@@ -347,7 +347,7 @@
 
     .contenedor2{
 
-        width: 300px;
+        width: 30px;
         height: 200x;
         margin-left: 30px;
         margin-top: 40px;
