--- a/css/footer.css
+++ b/css/footer.css
@@ -114,7 +114,7 @@
 
 
 
- @media only screen and (min-height: 701px) and (max-width: 1299px) and (orientation: portrait) {
+ @media only screen and (min-width: 768px) and (max-width: 1024px)  and (orientation: portrait) {
     .boxFooter{
 
         background-color:  rgba(45, 13, 20, 0.779);
