--- a/css/header.css
+++ b/css/header.css
@@ -85,7 +85,7 @@
 }
 
 
-@media only screen and (min-height: 701px) and (max-width: 1299px) and (orientation: portrait) {
+@media only screen and (min-width: 768px) and (max-width: 1024px)  and (orientation: portrait) {
 
     .boxHeader{
 
@@ -112,7 +112,7 @@
 
 
 
-@media only screen and (max-height: 701px) and (max-width: 1299px) and (orientation: landscape) { 
+@media only screen and (min-width: 768px) and (max-width: 1024px)  and (orientation: landscape) { 
 
     .boxHeader{
 
