--- a/css/index.css
+++ b/css/index.css
@@ -28,7 +28,7 @@ body{
 }
 
 
-@media only screen and (min-height: 701px) and (max-width: 1299px) and (orientation: portrait) {
+@media only screen and (min-width: 768px) and (max-width: 1024px)  and (orientation: portrait) {
 
 
     body{
@@ -38,7 +38,7 @@ body{
 
 }
 
-@media only screen and (min-width: 701px) and (max-width: 1299px) and (orientation: landscape) {
+@media only screen and (min-width: 768px) and (max-width: 1024px)  and (orientation: landscape) {
 
     body{
         width: auto;
