--- a/css/peliculas/wakanda.css
+++ b/css/peliculas/wakanda.css
@@ -370,7 +370,7 @@ body{
 
 
 
-@media only screen and (min-height: 701px) and (max-width: 1299px) and (orientation: portrait) {
+@media only screen and (min-width: 768px) and (max-width: 1024px)  and (orientation: portrait) {
 
     body{
         width: auto;
