--- a/css/article.css
+++ b/css/article.css
@@ -152,7 +152,7 @@
     }
 }
 
-@media only screen and (min-height: 701px) and (max-width: 1299px) and (orientation: portrait) {
+@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) {
 
     body{
         margin-left: 40px;
