--- a/css/header.css
+++ b/css/header.css
@@ -136,6 +136,27 @@
 
 }
 
+@media only screen and (min-width: 1025px) and (max-width: 1299px) and (orientation: landscape){ 
+
+    .boxHeader{
+
+        background-color: rgba(45, 13, 20, 0.779);
+        width: 100%;
+        height: 100px;
+        padding: 25px;
+        margin-top: 30px;
+        margin-bottom: 50px;
+        box-shadow: 10px 10px 10px  #464f93a6; /**sombra cabecera**/
+    }
+
+    #textoCabecera{
+        color:rgb(223, 214, 222);
+        font: 40px bold;
+        font-family: avengers;
+        text-align: center;
+        text-transform: uppercase; 
+        word-spacing: 20px;
+    }
 
 
 
@@ -143,9 +164,7 @@
 
 
 
-
-
-
+}
 
 
 
