--- a/css/quienessomos.css
+++ b/css/quienessomos.css
@@ -565,6 +565,24 @@ body{
         box-shadow: 10px 10px 10px #b3b5caa6;
         
     } 
+
+    @media only screen and (min-width: 1025px) and (max-width: 1299px)  and (orientation: landscape) { 
+
+
+
+
+
+
+
+
+
+
+
+
+
+        
+        
+    }
     
 }
 
