--- a/css/article.css
+++ b/css/article.css
@@ -64,7 +64,7 @@
 
 
 
-@media only screen and (min-height: 701px) and (max-width: 1299px) and (orientation: portrait) {
+@media screen and (max-width: 700px) and (orientation: portrait) {
     .boxArticle{
         margin-left: 15px;
         margin-top: 10px;
