--- a/css/article.css
+++ b/css/article.css
@@ -64,13 +64,13 @@
 
 
 
-@media screen and (max-width: 700px) and (orientation: portrait) {
+@media only screen and (max-width: 700px) and (orientation: portrait) {
     .boxArticle{
         margin-left: 15px;
         margin-top: 10px;
         margin-right: 5px;
         box-shadow: 3px 3px 3px #b3b5caa6;
-        height: 320px;
+        height: 420px;
         overflow: scroll;
     }
 
