--- a/css/section.css
+++ b/css/section.css
@@ -45,10 +45,10 @@
 }
 
 
-@media screen and (min-height:700px) and (orientation: portrait){
+@media screen and (max-width:700px) and (orientation: portrait){
     .boxSection{
-        width: 100%;
-        height:1000px;
+        width: 94%;
+        height:630px;
         margin: 10px 10px;
         
         
