--- a/css/quienessomos.css
+++ b/css/quienessomos.css
@@ -148,7 +148,7 @@ body{
    
 }
 
-@media screen and (max-width: 700px) and (orientation: portrait){
+@media screen and (max-width: 767px) and (orientation: portrait){
     body{
         background-image: url("../imagenes/fondo_quienessomos.jpg");
         background-attachment: fixed;
@@ -225,7 +225,7 @@ body{
     }
 }
 
-@media screen and (max-height: 700px) and (orientation: landscape){
+@media screen and (max-height: 767px) and (orientation: landscape){
     
 body{
     width: auto;
@@ -480,7 +480,7 @@ body{
         width: 60%;
         height: 300px;
         margin: 15px 25px;
-        float:left
+        float:left;
     }
     
     .boxPresentacion{
@@ -502,8 +502,8 @@ body{
 
     .sizeimagen{
         
-        width:200px;
-        height:200px;
+        width:100px;
+        height:100px;
         float: left;
         margin: 60px 25px 45px 45px;
 
@@ -530,7 +530,7 @@ body{
     
         text-align: justify;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
-        font-size: 15px;
+        font-size: 14px;
         color:white
         
     }
